style.css modified and commited

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
   font-family: 'Poppins', sans-serif;
   text-align: center;
-  background: #fff0f5;
+  background: #000000;
   margin: 0;
   padding: 0;
 }
 
 h1 {
-  color: #ff4d6d;
+  color: #ffffff;
   margin: 20px 0;
 }
 
